pull CSS out into separate file

--- a/index.html
+++ b/index.html
@@ -20,139 +20,12 @@
 			<button><svg width="15" height="16"><use href="#icon-cart"></use></svg>Add to Cart</button>
 		</div>
 	</article>
-	<style>
-		:root {
-			--color-bg-main: hsl(30, 38%, 92%);
-			--color-bg-card: hsl(0, 0%, 100%);
-			--color-primary: hsl(212, 21%, 14%);
-			--color-secondary: hsl(228, 12%, 48%);
-			--color-accent: hsl(158, 36%, 37%);
-			--color-accent-hover: hsl(158, 42%, 18%);
-			--font-family-sans: 'Montserrat', sans-serif;
-			--font-family-serif: 'Fraunces', serif;
-		}
-		html {
-			font-family: var(--font-family-sans);
-			background-color: var(--color-bg-main);
-			color: var(--color-primary);
-			box-sizing: border-box;
-		}
-		*,
-		*:before,
-		*:after {
-			box-sizing: inherit;
-		}
-		body {
-			margin: 0;
-			padding: 0;
-			min-height: 100vh;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-		}
-		img {
-			display: block;
-			width: 100%;
-			height: auto;
-		}
-		article {
-			width: 90%;
-			max-width: 21em;
-			background-color: var(--color-bg-card);
-			border-radius: .5em;
-			overflow: hidden;
-			margin: 1em auto;
-		}
-		article picture {
-			display: block;
-		}
-		article img {
-			aspect-ratio: 686/480;
-		}
-		article .cnt-box {
-			padding: 1.5em;
-		}
-		article h2 {
-			font-family: var(--font-family-serif);
-			font-size: 2em;
-			line-height: 1;
-			margin: 0;
-		}
-		article p {
-			color: var(--color-secondary);
-			margin: 0;
-			line-height: 1;
-			font-weight: 500;
-		}
-		article .desc {
-			font-size: .875em;
-			line-height: 1.6;
-			margin: 1em 0;
-		}
-		article .cat {
-			font-size: .75em;
-			text-transform: uppercase;
-			letter-spacing: .4em;
-			margin: 0 0 1em;
-		}
-		article .price {
-			font-family: var(--font-family-serif);
-			color: var(--color-accent);
-			font-size: 2em;
-			font-weight: bold;
-			margin-top: .9em;
-		}
-		article .price s {
-			font-family: var(--font-family-sans);
-			color: var(--color-secondary);
-			font-size: .4em;
-			font-weight: 500;
-			vertical-align: middle;
-			margin-left: .5em;
-		}
-		article button {
-			background-color: var(--color-accent);
-			color: #fff;
-			font-family: inherit;
-			font-size: .875em;
-			font-weight: bold;
-			border: none;
-			padding: 1em 1.8em;
-			border-radius: .5em;
-			margin-top: 1.5em;
-			width: 100%;
-			display: flex;
-			justify-content: center;
-			gap: .8em;
-		}
-		@media screen and (min-width: 42em) {
-			article {
-				max-width: 37.5em;
-				display: flex;
-				align-items: center;
-			}
-			article picture {
-				width: 50%;
-			}
-			article img {
-				aspect-ratio: 600/900;
-			}
-			article .cnt-box {
-				padding: 2em;
-				width: 50%;
-			}
-			article button:hover {
-				transition: .3s;
-				background-color: var(--color-accent-hover);
-				cursor: pointer;
-			}
-		}
-	</style>
 
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none;">
 		<symbol id="icon-cart" viewBox="0 0 15 16"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="currentColor"/></symbol>
 	</svg>
 
+	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
