change product info to list

--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
 			<source srcset="img/image-product-desktop.jpg" media="(min-width: 42em)">
 			<img src="img/image-product-mobile.jpg" width="343" height="240" alt="Photo of Gabrielle Essence Eau De Parfum perfume">
 		</picture>
-		<div class="cnt-box">
-			<p class="cat">Perfume</p>
-			<h2>Gabrielle Essence Eau De Parfum</h2>
-			<p class="desc">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
-			<p class="price">$149.99 <s>$169.99</s></p>
-			<button><svg width="15" height="16"><use href="#icon-cart"></use></svg>Add to Cart</button>
-		</div>
+		<ul>
+			<li class="cat">Perfume</li>
+			<li>
+				<h2>Gabrielle Essence Eau De Parfum</h2>
+			</li>
+			<li class="desc">
+				<p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+			</li>
+			<li class="price">$149.99 <s>$169.99</s></li>
+			<li>
+				<button><svg width="15" height="16"><use href="#icon-cart"></use></svg>Add to Cart</button>
+			</li>
+		</ul>
 	</article>
 
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none;">
@@ -30,6 +36,5 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
-	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 </body>
 </html>
